add link to lihat paket

--- a/index.html
+++ b/index.html
@@ -166,9 +166,8 @@
                     <ul class="ud-hero-buttons">
                         <li>
                             <a
-                                    href="https://github.com/devhau/startup-template"
+                                    href="#pricing"
                                     rel="nofollow noopener"
-                                    target="_blank"
                                     class="ud-main-btn ud-white-btn"
                             >
                                 Buat Website Sekarang
@@ -316,7 +315,7 @@
                         Jangan biarkan bisnis Anda tertinggal; bangun website yang mewakili kualitas dan profesionalisme
                         Anda.
                     </p>
-                    <a href="javascript:void(0)" class="ud-main-btn">Lihat Paket</a>
+                    <a href="#pricing" class="ud-main-btn">Lihat Paket</a>
                 </div>
             </div>
             <div class="ud-about-image">
@@ -365,7 +364,7 @@
                         </ul>
                     </div>
                     <div class="ud-pricing-footer">
-                        <a href="javascript:void(0)" class="ud-main-btn ud-border-btn">
+                        <a href="https://wa.me/6281291535163?text=Halo%20Sakanlabs%2C%20saya%20ingin%20bertanya%20tentang%20pembuatan%20website%20Paket%20Standart.%20Terima%20kasih" class="ud-main-btn ud-border-btn">
                             Pilih Paket
                         </a>
                     </div>
@@ -394,7 +393,7 @@
                         </ul>
                     </div>
                     <div class="ud-pricing-footer">
-                        <a href="javascript:void(0)" class="ud-main-btn ud-white-btn">
+                        <a href="https://wa.me/6281291535163?text=Halo%20Sakanlabs%2C%20saya%20ingin%20bertanya%20tentang%20pembuatan%20website%20Paket%20Premium.%20Terima%20kasih" class="ud-main-btn ud-white-btn">
                             Pilih Paket
                         </a>
                     </div>
@@ -421,7 +420,7 @@
                         </ul>
                     </div>
                     <div class="ud-pricing-footer">
-                        <a href="javascript:void(0)" class="ud-main-btn ud-border-btn">
+                        <a href="https://wa.me/6281291535163?text=Halo%20Sakanlabs%2C%20saya%20ingin%20bertanya%20tentang%20pembuatan%20website%20Paket%20Custom.%20Terima%20kasih" class="ud-main-btn ud-border-btn">
                             Pilih Paket
                         </a>
                     </div>
