--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!-- Primary Meta Tags -->
     <meta
             name="title"
-            content="Play - Free Open Source HTML Bootstrap Template by UIdeck"
+            content="Jasa Pembuatan Website Murah dan Berkualitas"
     />
     <meta
             name="description"
-            content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team"
+            content="SakanLabs Jasa Pembuatan Website Murah dan Berkualitas"
     />
 
     <!-- Open Graph / Facebook -->
@@ -23,11 +23,11 @@
     <meta property="og:url" content="https://uideck.com/play/"/>
     <meta
             property="og:title"
-            content="Play - Free Open Source HTML Bootstrap Template by UIdeck"
+            content="SakanLabs - Jasa Pembuatan Website Murah dan Berkualitas"
     />
     <meta
             property="og:description"
-            content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team"
+            content="SakanLabs - Jasa Pembuatan Website Murah dan Berkualitas"
     />
     <meta
             property="og:image"
@@ -39,11 +39,11 @@
     <meta property="twitter:url" content="https://uideck.com/play/"/>
     <meta
             property="twitter:title"
-            content="Play - Free Open Source HTML Bootstrap Template by UIdeck"
+            content="SakanLabs - Jasa Pembuatan Website Murah dan Berkualitas"
     />
     <meta
             property="twitter:description"
-            content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team"
+            content="SakanLabs - Jasa Pembuatan Website Murah dan Berkualitas"
     />
     <meta
             property="twitter:image"
